public/index.html -> font-awesome CDN link in use.

--- a/src/client/public/index.html
+++ b/src/client/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="./logo.png">
     <link href='https://fonts.googleapis.com/css?family=Sacramento' rel='stylesheet'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />
     <title>DevBit | DevBit is a community for software developers that consists of a history of messaging and integration and control version management in real time.</title>
   </head>
   <body>
